--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
   <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+  <div class="search-toggle">
+    <button id="menu-toggle">☰ 検索</button>
+  </div>
+  
   <div class="search-box">
     <h1>コードリファレンス</h1>
     🔍 クラス名:
