--- a/mandragoraIndex.html
+++ b/mandragoraIndex.html
@@ -17,7 +17,11 @@
 </head>
 
 <body>
-    <div class="search-box">
+  <div class="search-toggle">
+    <button id="menu-toggle">☰ 検索</button>
+  </div>
+
+    <div class="search-box" id="searchBox">
         <h1>マンドラゴラ簡易リファレンス</h1>
         🔍 クラス名:
         <input type="text" id="classSearch" placeholder="例: ScenesAutoUpdater">
